Grid/styles.css
*, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }

:root {
  --purple: hsl(256, 67%, 59%);

  --purple-light: #e8e0ff;
  --yellow: hsl(39, 100%, 71%);
  --yellow-bg: hsl(39, 100%, 71%);
  --peach: #fdf0e8;
  --white: #ffffff;
  --dark: #1a1a1a;
  --gray-bg: #f0f0f4;
  --green: #4caf7d;
  --text-muted: #666;
  --radius: 20px;
}

body {
  font-family: 'Manrope', sans-serif;
  padding: 20px;
}

.bento-grid {
  display: grid;
  grid-template-columns: 20% auto 20%;
  grid-template-rows: auto;
  gap: 10px;
}

.card {
  border-radius: var(--radius);
  overflow: hidden;
  padding: 20px;
  position: relative;
  border: 1px solid black;
}

/* Card Create Section */

.card-create {
  background: var(--peach);
  grid-column: 1;
  grid-row: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-top: 10%;
  /* min-height: 320px; */
}

.card-create h2 {
  font-size: 1.9rem;
  font-weight: 700;
  color: var(--dark);
  line-height: 1.2;
  margin-left: 10%
}

.card-create em {
  color: var(--yellow-bg);
  font-style: italic;
}

.btn-create {
  display: inline-flex;
  align-items: center;
  gap: 8px;
  background: var(--yellow);
  color: var(--purple);
  width: fit-content;
  border: none;
  padding: 10px 20px;
  border-radius: var(--radius);
  font-family: 'Manrope', sans-serif;
  font-weight: 700;
  margin-top: 20px;
  position: relative;
  cursor: pointer;
}

.diamond {
  font-size: 0.9rem;
}

.cursor-icon {
  position: absolute;
  right: 28px;
  bottom: 28px;
  font-size: 1.5rem;
  border: 1px solid black;
  border-radius: 100px;
  padding: 10px;
  background: var(--yellow);
}

.cursor-icon:hover {
  cursor: pointer;
}


/* Card Hero Section */

.card-hero {
  background: var(--purple);
  grid-row: 1;
  grid-column: 2 / span 2;
  grid-column: 2;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.card-hero h1 {
  font-size: 3.5rem;
  font-weight: 700;
  color: var(--white);
  line-height: 1.2;
  padding: 20px 0px;
  text-align: center;
}

.card-hero em {
  font-style: italic;
  color: var(--yellow);
}

.stars {
  display: flex;
  gap: 10px;
  padding-bottom: 10px;
}

.reviews {
  font-size: 0.9rem;
  font-weight: 500;
}

/* Card Schedule Section */

.card-schedule {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 50px 0 20px 30px;
}

